--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -3,7 +3,9 @@ $corSobreALoja:#f0e4e4;
 $corDestaque: #fffcfc;
 $corNav: #fbd2d2;
 $corText: #282626;
+$cortextNav: #9b6b6b;
 $btnColor: #119759;
+$btnHover: #358962;
 
 //fonts
 $font-principal: 'Crimson Text', serif;
