--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -92,7 +92,7 @@
         }
 
         button {
-            font-size: 10px;
+            font-size: 12px;
         }
         }
     }
@@ -104,6 +104,58 @@
             padding: 16px 8px;
         }
 }
+
+//##################################################################################################
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .tela {
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    section {
+        width: 90%;
+        margin: 0 auto;
+        border-radius: 12px;
+        padding: 12px;
+    }
+
+    .conteudo-loja img {
+        max-width: 350px;
+        height: 223px;
+        border-radius: 8px;
+        margin-top: 14px;
+    }
+
+    
+        
+    .lista-veiculos {
+        flex-wrap: wrap;
+
+        li {
+        list-style: none;
+        max-width: 46%;
+        margin: 0 2%;
+        margin-bottom: 24px;
+        
+        img {
+            max-width: 100%;
+        }
+        
+        h3 {
+            margin: 4px 0;
+        }
+        }
+    }
+
+    .carousel-imagens img {
+        width: 100%;
+    }
+
+
+}
+
+
 
 .container-flex {
     margin: 0 auto;
