alteração de conteudo

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -20,6 +20,7 @@ button:hover {
     padding: 8px;
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0.2);
+    font-family: variaveis.$font-principal;
 }
 
 
