--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -109,6 +109,8 @@ footer li {
         li{
             list-style-type: circle;
             font-family: variaveis.$font-secundaria;
+            font-size: 14px;
+            margin-top: 4px;
         }
     }
 }
