--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,12 +1,12 @@
-$corHeader: #f0e4e4;
-$corSobreALoja:#f0e4e4;
+$corHeader: #FFF8DC;
+$corSobreALoja:#FFFFF0;
 $corDestaque: #fffcfc;
-$corNav: #fbd2d2;
+$corNav: #FFFFE0;
 $corText: #282626;
-$cortextNav: #9b6b6b;
+$cortextNav: #626262;
 $btnColor: #119759;
 $btnHover: #358962;
 
 //fonts
-$font-principal: 'Crimson Text', serif;
-$font-secundaria: 'Josefin Sans', sans-serif;
+$font-principal: 'DM Serif Display', serif;
+$font-secundaria: 'Saira Condensed', sans-serif;
