--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,8 +1,8 @@
-$corHeader: #FFF8DC;
-$corSobreALoja:#FFFFF0;
-$corDestaque: #fffcfc;
-$corNav: #FFFFE0;
-$corText: #282626;
+$corHeader: #0f0f10;
+$corSobreALoja:#0f0f10;
+$corDestaque: #0f0f10;
+$corNav: #1d1d1f;
+$corText: #fff;
 $cortextNav: #626262;
 $btnColor: #119759;
 $btnHover: #358962;
