--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,8 +1,13 @@
+@use 'variaveis';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+}
+
+body{
+    background-color: variaveis.$corDestaque;
 }
 
